--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,12 @@ Version: 0.1.0
 Author: Shane Halloran
 Maintainer: Shane Halloran <shane@jumpingrivers.com>
 Description: Testing whether data scientists can do what they expect in RStudio/Workbench.
-License: N/A
+License: Proprietary
 Encoding: UTF-8
 LazyData: true
-Imports: 
-    testthat (>= 3.1.4)
+Imports:
+    testthat (>= 3.1.4),
+    dplyr (>= 1.0.9),
+    ggplot2 (>= 3.3.6),
+    Matrix (>= 1.4),
+    reticulate (>= 1.25)
