--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,7 @@ Encoding: UTF-8
 LazyData: true
 Suggests:
     reticulate,
+    withr,
     testthat (>= 3.0.0)
 RoxygenNote: 7.2.1
 Config/testthat/edition: 3
