--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Encoding: UTF-8
 LazyData: true
 Suggests:
     reticulate,
-    withr,
     testthat (>= 3.0.0)
+    withr
 RoxygenNote: 7.2.1
 Config/testthat/edition: 3
