--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,18 @@
 Package: workbenchtest
 Type: Package
 Title: RStudio/Workbench User Acceptance Tests
-Version: 0.1.0
-Author: Shane Halloran
-Maintainer: Shane Halloran <shane@jumpingrivers.com>
+Version: 0.0.9001
+Authors@R: 
+    person(given = "Jumping",
+           family = "Rivers",
+           role = c("aut", "cre"),
+           email = "info@jumpingrivers.com")
 Description: Testing whether data scientists can do what they expect in RStudio/Workbench.
 License: file LICENSE
 Encoding: UTF-8
 LazyData: true
 Suggests:
+    quarto,
     reticulate,
     testthat (>= 3.0.0)
     withr
