--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,22 @@
 Type: Package
 Package: workbenchtest
 Title: RStudio/Workbench User Acceptance Tests
-Version: 0.1.0
+Version: 0.1.1
 Authors@R: 
     person("Jumping", "Rivers", , "info@jumpingrivers.com", role = c("aut", "cre"))
 Description: Testing whether data scientists can do what they expect in
     RStudio Workbench.
 License: file LICENSE
 Imports:
-    processx,
-    withr
+    utils
 Suggests:
-    devtools,
-    logr,
+    processx,
+    quarto,
+    remotes,
     reticulate,
     stringr,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    withr
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
