--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,23 +1,31 @@
 Type: Package
-Package: workbenchtest
+Package: jrHealthCheckWorkbench
 Title: RStudio/Workbench User Acceptance Tests
-Version: 0.1.2
+Version: 0.2.0
 Authors@R: 
     person("Jumping", "Rivers", , "info@jumpingrivers.com", role = c("aut", "cre"))
 Description: Testing whether data scientists can do what they expect in
     RStudio Workbench.
 License: file LICENSE
 Imports:
+    BiocManager,
+    cli,
+    dplyr,
     fs,
+    httr,
     processx,
+    purrr,
+    quarto,
+    R6,
+    remotes,
+    reticulate,
+    rlang,
+    stringr,
     utils,
     withr
 Suggests:
-    quarto,
-    remotes,
-    reticulate,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: false
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.2
