--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: jrHealthCheckWorkbench
 Title: RStudio/Workbench User Acceptance Tests
-Version: 0.2.0
+Version: 0.2.1
 Authors@R: 
     person("Jumping", "Rivers", , "info@jumpingrivers.com", role = c("aut", "cre"))
 Description: Testing whether data scientists can do what they expect in
@@ -20,6 +20,7 @@ Imports:
     remotes,
     reticulate,
     rlang,
+    rstudioapi,
     stringr,
     utils,
     withr
@@ -28,4 +29,4 @@ Suggests:
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: false
-RoxygenNote: 7.2.2
+RoxygenNote: 7.2.3
