feat: Use uat base

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,13 @@ export(check_git_cloning)
 export(check_github)
 export(check_python_pip)
 export(check_python_reticulate)
+export(check_quarto_beamer)
+export(check_quarto_docx)
 export(check_quarto_html)
+export(check_quarto_observable)
 export(check_quarto_pdf)
-import(R6)
+export(check_rmd_html)
+export(check_rmd_pdf)
+export(check_rmd_word)
+export(create_config)
 importFrom(rlang,.data)
