--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: jrHealthCheckWorkbench
 Title: RStudio/Workbench User Acceptance Tests
-Version: 0.2.1
+Version: 0.2.2
 Authors@R: 
     person("Jumping", "Rivers", , "info@jumpingrivers.com", role = c("aut", "cre"))
 Description: Testing whether data scientists can do what they expect in
@@ -16,14 +16,18 @@ Imports:
     processx,
     purrr,
     quarto,
-    R6,
     remotes,
     reticulate,
     rlang,
+    rmarkdown,
     rstudioapi,
+    serverHeaders,
     stringr,
+    tibble,
+    uatBase,
     utils,
-    withr
+    withr,
+    yaml
 Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
