--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(check_quarto_docx)
 export(check_quarto_html)
 export(check_quarto_observable)
 export(check_quarto_pdf)
+export(check_quarto_rsvg_convert)
 export(check_rmd_html)
 export(check_rmd_pdf)
 export(check_rmd_word)
