feat: Move to GitHub and rename

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Type: Package
 Package: jrHealthCheckWorkbench
 Title: RStudio/Workbench User Acceptance Tests
-Version: 0.2.5
+Version: 0.3.0
 Authors@R: 
     person("Jumping", "Rivers", , "info@jumpingrivers.com", role = c("aut", "cre"))
 Description: Testing whether data scientists can do what they expect in
     RStudio Workbench.
 License: file LICENSE
 Imports:
+    audit.base,
     BiocManager,
     cli,
     dplyr,
@@ -24,7 +25,6 @@ Imports:
     serverHeaders,
     stringr,
     tibble,
-    uatBase (>= 0.1.1),
     utils,
     withr,
     yaml
