feat: Add Github Actions

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,6 +30,9 @@ Imports:
     yaml
 Suggests:
     testthat (>= 3.0.0)
+Remotes:
+    jumpingrivers/audit.base,
+    jumpingrivers/serverheaders
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: false
