--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,4 +19,5 @@ export(check_rmd_html)
 export(check_rmd_pdf)
 export(check_rmd_word)
 export(create_config)
+importFrom(dplyr,"%>%")
 importFrom(rlang,.data)
