--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Type: Package
 Package: audit.workbench
 Title: RStudio/Workbench User Acceptance Tests
-Version: 0.6.4
+Version: 0.6.5
 Authors@R: 
     person("Jumping", "Rivers", , "info@jumpingrivers.com", role = c("aut", "cre"))
 Description: Testing whether data scientists can do what they expect in
-    RStudio Workbench.
+    Posit Workbench.
 License: file LICENSE
 Imports:
-    audit.base (>= 0.6.9),
+    audit.base (>= 0.6.20),
     BiocManager,
     cli,
     dplyr,
@@ -20,7 +20,6 @@ Imports:
     remotes,
     rlang,
     rmarkdown,
-    rstudioapi,
     serverHeaders,
     stringr,
     tibble,
@@ -29,6 +28,8 @@ Imports:
     yaml
 Suggests:
     reticulate,
+    rvest,
+    rstudioapi,
     testthat (>= 3.0.0)
 Remotes:
     jumpingrivers/audit.base,
@@ -36,4 +37,5 @@ Remotes:
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: false
-RoxygenNote: 7.2.3
+Language: en-GB
+RoxygenNote: 7.3.2
